[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
pollster = "0.2.5"
raw-window-handle = "0.5.0"
smithay-client-toolkit = { git = "https://github.com/smithay/client-toolkit", rev = "beefe0a" }
thiserror = "1.0.38"
wayland-backend = { version = "0.1.0", features = ["client_system"] }
wayland-client = "0.30.0"
wgpu = "0.14.0"
# clap = { version = "4.0.19", features = ["derive"] }
# reqwest = { version = "0.11.12", features = ["rustls-tls"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0.87"
# tokio = { version = "1", features = ["full"] }
